# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//components/viz/viz.gni")
import("//testing/test.gni")

if (is_android) {
  java_cpp_features("java_features_srcjar") {
    # External code should depend on ":viz_java" instead.
    visibility = [ ":*" ]
    sources = [ "common/features.cc" ]
    template = "common/java/src/org/chromium/components/viz/common/VizFeatures.java.tmpl"
  }

  android_library("viz_java") {
    # Right now, this only includes the Java features. But if we need more Java
    # files, they should be added here as necessary.
    srcjar_deps = [ ":java_features_srcjar" ]
  }
}
